test/org/midica/testfiles/failing/zero-with-m.midica
INCLUDE inc/instruments.midica

0 - - m
